[tool.poetry]
name = "homebrew-soh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
soh = "^0.1.1"

[tool.poetry.dev-dependencies]
python-brewer = "^0.3.0"
homebrew-pypi-poet = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
